--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "ColiCool",
-    "slug": "ColiCool",
+    "name": "Ktob",
+    "slug": "Ktob",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
